RESOLVED FIXED91022
WebFullScreenController and WKFullScreenWindowController shouldn't add unprefixed methods to AppKit classes
https://bugs.webkit.org/show_bug.cgi?id=91022
Summary WebFullScreenController and WKFullScreenWindowController shouldn't add unpref...
Mark Rowe (bdash)
Reported 2012-07-11 15:02:31 PDT
WebFullScreenController and WKFullScreenWindowController both add a method named convertRectToScreen: on to NSWindow via a category when building for 10.6 and earlier. This causes problems when building for 10.6 against a newer SDK as NSWindow already has a method of that name. It's also unhygienic as it could interfere with a client application that provides methods of the same name.
Attachments
Patch v1 (6.89 KB, patch)
2012-07-11 15:08 PDT, Mark Rowe (bdash)
mitz: review+
Mark Rowe (bdash)
Comment 1 2012-07-11 15:08:07 PDT
Created attachment 151794 [details] Patch v1
Mark Rowe (bdash)
Comment 2 2012-07-11 19:08:32 PDT
Landed in r122403.
Note You need to log in before you can comment on or make changes to this bug.