<http://webkit.org/b/91022> WebFullScreenController and WKFullScreenWindowController shouldn't add unprefixed methods to AppKit classes

Reviewed by Dan Bernstein.

Source/WebKit/mac:

* WebView/WebFullScreenController.mm:
(convertRectToScreen): Add a static helper method that calls through to -[NSWindow convertRectToScreen:] on OS versions where it exists
but otherwise provides a compatibility implementation of it.
(-[WebFullScreenController enterFullScreen:]): Call our new helper.

Source/WebKit2:

* UIProcess/mac/WKFullScreenWindowController.mm:
(convertRectToScreen): Add a static helper method that calls through to -[NSWindow convertRectToScreen:] on OS versions where it exists
but otherwise provides a compatibility implementation of it.
(-[WKFullScreenWindowController enterFullScreen:]): Call our new helper.

Canonical link: https://commits.webkit.org/108878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122403 268f45cc-cd09-0410-ab3c-d52691b4dbfc